@@ -11,6 +11,7 @@
 * Base Gateway: Add new `unsupported_feature` standard error code [jasonwebster] #2322
 * Authorize.net: Use new `unsupported_feature` standard error code [jasonwebster] #2322
 * Kushki: Add new gateway [shasum] #2326
+* PayU LATAM: Count pending refunds as succeeded [curiousepic] #2336
 
 == Version 1.63.0 (February 2, 2017)
 * Authorize.net: Add #unstore support [jimryan] #2293
